[package]
name = "ur20-modbus"
version = "0.5.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/slowtec/ur20-modbus"
description = "Modbus TCP fieldbus coupler (`UR20-FBC-MOD-TCP`) implementation"
repository = "https://github.com/slowtec/ur20-modbus"
edition = "2024"
rust-version = "1.85"

[dependencies]
log = "0.4"
thiserror = "2.0.12"
ur20 = "0.6"

[dependencies.tokio-modbus]
version = "0.16.1"
default-features = false
features = ["tcp"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[badges]
maintenance = { status = "actively-developed" }
